# edgedb-js-lexer

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md  extractTokens.js  package.json  tsconfig.json
loader/: index.d.ts  index.js
src/: error.ts  index.ts  interfaces.ts  lib.rs
tests/: utf16_off.rs
